@@ -31,9 +31,12 @@
     if (this.options.data_aggregation) {
       this.options.cumulative = this.options.data_aggregation === 'cumulative';
     }
+    var e = this.options.extra_params || (this.options.extra_params = {});
     if (this.options.auth_token) {
-      var e = this.options.extra_params || (this.options.extra_params = {});
       e.auth_token = this.options.auth_token;
+    }
+    if (this.options.stat_tag) {
+      e.stat_tag = this.options.stat_tag;
     }
 
     this._fetchMap();
